<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="nothing">Nothing</string>

    <string name="disable_ads">Disable ads for one day</string>
    <string name="disable_ads_msg">Want to disable ads?</string>
    <string name="buy_pro">Buy Pro Version</string>
    <string name="watch_ads">Disable today</string>
    <string name="language">App language</string>

    <string name="something_went_wrong">Something went wrong…</string>

    <string-array name="locales_string">
        <item>System</item>
        <item>English</item>
        <item>Русский</item>
        <item>Українська</item>
    </string-array>

    <string-array name="locales_values">
        <item>system</item>
        <item>en</item>
        <item>ru</item>
        <item>uk</item>
    </string-array>

    <string-array name="font_size_names">
        <item>@string/very_small_font</item>
        <item>@string/small_font</item>
        <item>@string/medium_font</item>
        <item>@string/big_font</item>
        <item>@string/very_big_font</item>
    </string-array>

    <string name="very_small_font">Very small</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Normal</string>
    <string name="big_font">Large</string>
    <string name="very_big_font">Very Large</string>

    <string name="main_prefs">Main settings</string>
    <string name="language_settings">Language Settings</string>
    <string name="change_lang_by_user">Select a language manually</string>

    <string-array name="theme_values">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string-array name="theme_names" translatable="false">
        <item>@string/system_theme</item>
        <item>@string/light_theme</item>
        <item>@string/dark_theme</item>
    </string-array>

    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="system_theme">System</string>

    <string name="font_size">Font size</string>
    <string name="app_theme">Application Theme</string>
    <string name="nothing_to_show">Nothing here yet</string>

    <string name="settings">Settings</string>
    <string name="rate_app">Rate app</string>
    <string name="more_apps">More Apps</string>
    <string name="other">Other</string>
    <string name="ok">OK</string>
    <string name="just_a_minute">Just a moment</string>
    <string name="ad_is_loading">Advertising is loading…</string>
    <string name="loading">Loading…</string>

    <string name="about">About app</string>
    <string name="copy_in_buffer">The text copied</string>
    <string name="copied_to_buffer">The text copied: %s</string>

    <string name="exiting_app">Already leave?</string>
    <string name="already_leave">Quit the application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_name">UnLib</string>
    <string name="share">Share with…</string>
    <string name="toast">Toast</string>
</resources>